2009-10-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-03
	* make get_legend_title() in various executables (bin/*_x.cc) more
	robust

2009-10-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-02
	* adjust JPT configuration for 33X (331)
	* add sc5jpt and ak5jpt
	* add jra.config and jra_etaphi.config to config dir: these files
	can be passed to the jet_response_analyzer_x executable as the
	first parameter in order to define sensible binnings in pt, eta,
	and phi
	* add jra_dr.config and jra_etaphi_dr.config: same as above, but
	with individual matching requirements for each algorithm found to
	yield ~ the same matching efficiency. RECOMMENDED!

2009-09-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-01
	* re-activate JPT in configuration (schedule)

2009-09-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-00
	* CMSSW 33X and above!
	* furhter reorganize configuration files
	* no need for configuration files from SchieferD
	* based on jet reco rewrite intorduced in 33X cycle
	
2009-09-02  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* reorganization of configuration files


2009-08-31  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* split jet reconsruction & jpt reconstruction (in
	SchieferD/Configuration), adjust *_cfg.py files in test/
	accordingly
 	
2009-08-31  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* fix inputtags, ak5->antikt5
	* by default, (1) don't rerun any jet reconstruction and (2) only
	analyze those jets found in the (31X) standard RECO files
	
2009-08-17 Philipp Schieferdecker <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* add configuration for kt/ca with D=0.5/0.7
	* add jet_response_and_resolution_x
	
2009-07-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* tested with 2213 and 310